Add core venmo egg features without any real nice to haves.
